Collection d'infos et image

--- a/html/biere-8.html
+++ b/html/biere-8.html
@@ -6,20 +6,40 @@
 	
 	<!-- Materialize -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
 	
 	<!-- Stylesheet -->
 	<link rel="stylesheet" href="../style/biere-8.css">
 </head>
 <body>
-	<div class="container">
+	<!-- Title -->
+	<h2 class="center-align">Fake Lager</h2>
+	<div class="divider grey darken-4"></div>
+	
+	<div class="container row">
 		<!-- Left column -->
-		<div class="col s4">
-		
+		<div class="col s6">
+			<div class="col s3 valign-wrapper">
+				<img class="responsive-img" src="../media/biere-8.png" alt="Bière Fake Lager">
+			</div>
+			<ul class="collection">
+				<li class="collection-item">Depuis <strong>Mars 2013</strong></li>
+				<li class="collection-item"><strong>4.4</strong> de pH</li>
+				<li class="collection-item">Atténuation: <strong>78</strong></li>
+				<li class="collection-item">Volume d'ébullition: <strong>20L</strong></li>
+				<li class="collection-item">
+					Accords
+					<ul class="browser-default">
+						<li>Gateaux de crabe frit et salsa à l'avocat</li>
+						<li>Rouleaux au porc frit et sauce piquante</li>
+						<li>Key Lime Pie</li>
+					</ul>
+				</li>
+			</ul>
 		</div>
 		
 		<!-- Right column -->
-		<div class="col s8">
+		<div class="col s6">
 			<!-- Ingredients table -->
 			<table>
 				<thead>
