Add return button

--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -14,6 +14,10 @@
         <link rel="stylesheet" href="../style/biere-2.css" />
     </head>
     <body>
+        <header>
+            <a href="../index.html"><i class="material-icons">arrow_back</i></a>
+            <h1>Trashy Blonde</h1>
+        </header>
         <img #beerImg src="../media/biere-2.png" alt="Photo de la bière Trashy Blonde, avec une étiquette violette et pleins de petits psssshhhh de graffitis partout sur la bouteille.">
 
         <table class="striped">
@@ -63,8 +67,8 @@
             </tbody>
         </table>
 
-        <a class="waves-effect waves-light btn">Précédent</a>
-        <a class="waves-effect waves-light btn">Suivant</a>
+        <a class="waves-effect waves-light btn" href="biere-1.html">Précédent</a>
+        <a class="waves-effect waves-light btn" href="biere-3.html">Suivant</a>
         <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
     </body>
 </html>
