:bugs: multiples fixs

--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -47,7 +47,10 @@
                         <li class="collection-item">Grilled chicken quesadilla</li>
                         <li class="collection-item">Caramel toffee cake</li>
                      </ul>
-                     <p><span class="dataName">Déjà bu?: </span></p>
+                    <label>
+                        <input type="checkbox" class="filled-in" checked="checked" />
+                        <span>Déjà bu?</span>
+                      </label>
                      <p><span class="dataName">Date de dégustation: </span>14/0/2020</p>
                   </div>
                </div>
@@ -123,8 +126,8 @@
          </div>
       </div>
       <footer class="page-footer">
-         <div class="container">
-            Audo Thomas
+         <div class="container alignCenterTextFooter" >
+            <p>Audo Thomas</p>
          </div>
       </footer>
    </body>
