chore(biere-5): wip table

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -29,7 +29,7 @@
 <main class="container">
 
     <div class="row">
-        <div class="col s5">
+        <div class="col s12 l5">
 
             <div class="card-panel">
                 <div class="row">
@@ -82,7 +82,26 @@
             </div>
 
         </div>
-        <div class="col s7"></div>
+        <div class="col s12 l7">
+            <div class="card-panel">
+                <table class="highlight stripped">
+                    <thead>
+                        <tr>
+                            <th>Category</th>
+                            <th>Name</th>
+                            <th>Amount</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Malt</td>
+                            <td>Larger Malt</td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
     <div class="row center-align">
