:sparkles: utility buttons

--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -122,7 +122,10 @@
             </div>
          </div>
          <div class="col s12">
-            precedent/suivant
+            <div class="utilityButtons center-align">
+                <a class="waves-effect waves-light btn">Précedent</a>
+                <a class="waves-effect waves-light btn">Suivant</a>
+            </div>
          </div>
       </div>
       <footer class="page-footer">
