:art: textarea style

--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -113,12 +113,10 @@
             </div>
             <div class="col s2"></div>
             <div class="col s5">
-               <form>
-                   <label for="review">Votre review:</label>
-                   <textarea name="review">
-
-                   </textarea>
-               </form>
+                <div class="input-field col s12">
+                    <textarea id="textarea1" class="materialize-textarea" style="height: 8em;"></textarea>
+                    <label for="textarea1">Votre review:</label>
+                </div>
             </div>
          </div>
          <div class="col s12">
