--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -18,57 +18,67 @@
             <a href="../index.html"><i class="material-icons">arrow_back</i></a>
             <h1>Trashy Blonde</h1>
         </header>
-        <img #beerImg src="../media/biere-2.png" alt="Photo de la bière Trashy Blonde, avec une étiquette violette et pleins de petits psssshhhh de graffitis partout sur la bouteille.">
-
-        <table class="striped">
-            <thead>
-                <tr>
-                    <td>Malt</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td>Maris Otter Extra Pale</td>
-                    <td>3.25kg</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Caramalt</td>
-                    <td>0.2kg</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Munich</td>
-                    <td>0.4kg</td>
-                </tr>
-                <tr>
-                    <td>Hops</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Amarillo</td>
-                    <td>40.1g</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Simcoe</td>
-                    <td>13.8g</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Motueka</td>
-                    <td>18.8g</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <a class="waves-effect waves-light btn" href="biere-1.html">Précédent</a>
-        <a class="waves-effect waves-light btn" href="biere-3.html">Suivant</a>
+        <div class="container">
+            <div class="row">
+                <div class="col s3">
+                    <img #beerImg src="../media/biere-2.png" alt="Photo de la bière Trashy Blonde, avec une étiquette violette et pleins de petits psssshhhh de graffitis partout sur la bouteille.">
+                    <h6>You know you shouldn't</h6>    
+                </div>
+                <div class="col s3">
+                    <p>blabla</p>
+                </div>
+                <div class="col s6">
+                    <table class="striped">
+                        <thead>
+                            <tr>
+                                <td>Malt</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td></td>
+                                <td>Maris Otter Extra Pale</td>
+                                <td>3.25kg</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Caramalt</td>
+                                <td>0.2kg</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Munich</td>
+                                <td>0.4kg</td>
+                            </tr>
+                            <tr>
+                                <td>Hops</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Amarillo</td>
+                                <td>40.1g</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Simcoe</td>
+                                <td>13.8g</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Motueka</td>
+                                <td>18.8g</td>
+                            </tr>
+                        </tbody>
+                    </table>  
+                </div>
+            </div>
+            <a class="waves-effect waves-light btn" href="biere-1.html">Précédent</a>
+            <a class="waves-effect waves-light btn" href="biere-3.html">Suivant</a>
+        </div>
         <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
     </body>
 </html>
