feat: button actions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="biere">
 				<a href="./html/biere-6.html">Bière 6</a>
-				<img src="./media/biere-6.png" alt="Bière 6" />
+				<img src="https://images.punkapi.com/v2/6.png" alt="Bière 6" />
 				<p>baseline 6</p>
 			</div>
 			<div class="biere">
