--- a/html/biere-6.html
+++ b/html/biere-6.html
@@ -11,7 +11,7 @@
       <div class="nav-wrapper indigo lighten-2">
         <a href="#" class="brand-logo center">Electric India</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <a class="waves-effect waves-light btn">Retour</a>
+          <a class="waves-effect waves-light btn" href="../index.html">Retour</a>
         </ul>
       </div>
     </nav>
@@ -85,8 +85,8 @@
       </div>
       <div class="row beer-buttons">
         <div class="col s12 center">
-          <a class="waves-effect waves-light btn">Précédent</a>
-          <a class="waves-effect waves-light btn">Suivant</a>
+          <a class="waves-effect waves-light btn" href="./biere-5.html">Précédent</a>
+          <a class="waves-effect waves-light btn" href="./biere-7.html">Suivant</a>
         </div>
       </div>
     </div>
