feat(biere-5): add datepicker

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -56,7 +56,7 @@
                             </label>
                         </div>
                         <div class="degustation-date">
-                            01/01/1970
+                            <input type="text" class="datepicker">
                         </div>
                     </div>
                 </div>
@@ -159,5 +159,9 @@
         </div>
     </div>
 </footer>
+
+<script type="text/javascript" defer>
+    M.AutoInit();
+</script>
 
 </html>
