--- a/html/biere-11.html
+++ b/html/biere-11.html
@@ -17,10 +17,19 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <div class="row" style="margin: 100px;">
-                <div class="col s1"><img src="https://images.punkapi.com/v2/keg.png" alt="Italian Trulli" width="200"></div>
-                <div class="col s2" style="margin-left: 300px;">
+        <main style="margin: 100px;">
+            <div class="row">
+                <div class="col s2"><img src="https://images.punkapi.com/v2/keg.png" alt="Italian Trulli" width="200"></div>
+                <div class="col s2">
+                    <p>Roasted garlic and chilli infused camembert cheese</p>
+                    <p>
+                        <label>
+                        <input type="checkbox" />
+                        <span>Déja bu</span>
+                        </label>
+                    </p>
+                </div>
+                <div class="col s2">
                     <table>            
                       <tbody>
                         <tr>
@@ -46,6 +55,11 @@
                       </tbody>
                     </table>
                 </div>
+            </div>
+            <div style="margin-bottom: 10px; margin-left: 15px;"><i class="material-icons">star</i><i class="material-icons">star</i><i class="material-icons">star</i><i class="material-icons">star</i><i class="material-icons">star_border</i></div>
+            <div class="row">
+                <div class="col s3"><p>Lots of malt in this one. Mash-in in stages, and spread the pale ale malt throughout the mash to provide stability. If the mash starts to sink, stop, wait a few minutes while mixing, then start again.</p></div>
+                <div class="col s6" style="margin-left: 100px;"><textarea></textarea></div>
             </div>
             <div class="center" style="padding-bottom: 10px;">
                 <a class="waves-effect waves-light btn-small">Précedent</a>
