--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -65,29 +65,29 @@
                      <tr>
                         <td></td>
                         <td>Maris Otter Extra Pale</td>
-                        <td>3.3 kilograms</td>
+                        <td><i>3.3 kilograms</i></td>
                      </tr>
                      <tr>
                         <td></td>
                         <td>Caramalt</td>
-                        <td>0.2 kilograms</td>
+                        <td><i>0.2 kilograms</i></td>
                      </tr>
                      <tr>
                         <td></td>
                         <td>Munich</td>
-                        <td>0.4 kilograms</td>
+                        <td><i>0.4 kilograms</i></td>
                      </tr>
                      <tr>
                         <td class="dataName">Hops</td>
                      <tr>
                         <td></td>
                         <td>Fuggles</td>
-                        <td>25 grams</td>
+                        <td><i>25 grams</i></td>
                      </tr>
                      <tr>
                         <td></td>
                         <td>First Gold</td>
-                        <td>25 grams</td>
+                        <td><i>25 grams</i></td>
                      </tr>
                      </tr>
                      <tr>
@@ -96,7 +96,7 @@
                         <td>
                         </td>
                         <td>Wyeast 1056</td>
-                        <td>American Ale</td>
+                        <td><i>American Ale</i></td>
                      </tr>
                      </tr>
                   </tbody>
@@ -125,17 +125,14 @@
                 <a class="waves-effect waves-light btn">Suivant</a>
             </div>
          </div>
+         <div class="fixed-action-btn">
+            <a class="btn-floating btn-large red">
+              <i class="large material-icons">mode_edit</i>
+            </a>
+          </div>
       </div>
-      <footer class="page-footer">
-         <div class="container alignCenterTextFooter" >
-            <p>Audo Thomas</p>
-         </div>
+      <footer class="page-footer center-align">
+           <span>AUDO Thomas - FIL A2 2022</span>
       </footer>
-      <script>
-            document.addEventListener('DOMContentLoaded', function() {
-                var elems = document.querySelectorAll('.datepicker');
-                var instances = M.Datepicker.init(elems, options);
-            });
-      </script>
    </body>
 </html>
