style(biere-5): display food pairing as collection

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -43,10 +43,10 @@
                         <div class="boil-volume">25 litres</div>
                         <div class="food-pairing">
                             Food pairing:
-                            <ul>
-                                <li>Vietnamese squid salad</li>
-                                <li>Chargrilled corn on the cob with paprika butter</li>
-                                <li>Strawberry and rhubarb pie</li>
+                            <ul class="collection">
+                                <li class="collection-item">Vietnamese squid salad</li>
+                                <li class="collection-item">Chargrilled corn on the cob with paprika butter</li>
+                                <li class="collection-item">Strawberry and rhubarb pie</li>
                             </ul>
                         </div>
                         <div class="already-drinked">
