--- a/html/biere-7.html
+++ b/html/biere-7.html
@@ -14,6 +14,8 @@
 <body>
     <nav>
         <div class="nav-wrapper">
+            <a href="../index.html"><i class="material-icons left">keyboard_arrow_left</i></a>
+
             <a href="#" class="brand-logo center">AB:12</a>
         </div>
     </nav>
@@ -55,7 +57,7 @@
                                     <span>Déjà bu</span>
                                 </label>
                             </p>
-                                <input type="text" class="datepicker">
+                            <input type="text" class="datepicker">
                             <p>84</li>
                         </ul>
                     </div>
@@ -131,14 +133,14 @@
             </div>
         </div>
     </div>
-    <footer class="page-footer">
-        <div class="container">
-            <div class="row center">
-                <a class="waves-effect waves-light btn amber">Précedent</a>
-                <a class="waves-effect waves-light btn amber">Suivant</a>
+    <div class="container">
+        <div class="row center">
+            <a class="waves-effect waves-light btn amber " href="./html/biere-6.html">Précedent</a>
+            <a class="waves-effect waves-light btn amber" href="./html/biere-8.html">Suivant</a>
 
-            </div>
         </div>
+    </div>
+    <footer class="page-footer">
         <div class="footer-copyright">
             <div class="container">
                 <div class="row center">
