--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biere 5</title>
+    <title>10 Heads High</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
@@ -23,6 +23,9 @@
         <a href="../index.html" class="brand-logo">
             <i class="material-icons">arrow_back</i>
         </a>
+        <ul class="right hide-on-med-and-down">
+            <li>10 Heads High</li>
+        </ul>
     </div>
 </nav>
 
@@ -34,7 +37,7 @@
             <div class="card-panel">
                 <div class="row">
                     <div class="col s6">
-                        <img src="https://images.punkapi.com/v2/5.png" alt="Image de la bière 5" class="responsive-img">
+                        <img src="https://images.punkapi.com/v2/29.png" alt="Image de la bière 5" class="responsive-img">
                     </div>
                     <div class="col s6">
                         <div class="first-brewed">02/2011</div>
