feat(biere-5): add comment area

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -139,6 +139,11 @@
                     </tbody>
                 </table>
             </div>
+
+            <div class="input-field col s12">
+                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                <label for="textarea1">Comment</label>
+              </div>
         </div>
     </div>
 
