--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<link rel="stylesheet" href="./style/index.css" />
+		<meta charset="UTF-8">
 	</head>
 	<body>
 		<h1>Catalogue des bières</h1>
