--- a/html/biere-21.html
+++ b/html/biere-21.html
@@ -20,28 +20,196 @@
 <body>
 <nav class="orange darken-3" role="navigation">
     <div class="nav-wrapper container">
-        <a href="../index.html" class="brand-logo center">Bière 21</a>
+        <a href="../index.html" class="brand-logo center">Vice Bier</a>
         <ul class="left hide-on-med-and-down">
-            <li><a href="../index.html"><i class="material-icons">arrow_back</i></a></li>
+            <li><a href="#"><i class="material-icons">arrow_back</i></a></li>
+        </ul>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="#">Beer 21</a></li>
         </ul>
     </div>
 </nav>
 
 <div class="container">
 
+</div>
+<div class="section">
     <div class="row">
 
-        <div class="col s4">
+        <div class="col s4" style="border-right: 1px solid darkblue;">
+
+            <div class="row">
+
+                <div class="col s6">
+                    <img src="../media/biere-21.png" alt="Beer 21" class="responsive-img z-depth-2">
+
+                    <h6 class="center">
+                        Vice Bier
+                    </h6>
+
+                    <p class="center">
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star_border</i>
+                    </p>
+                </div>
+
+                <div class="col s6">
+                    <h5><i class="material-icons">featured_play_list</i> Identity card</h5>
+                    <ul>
+                        <li>
+                            <p>
+                                <strong>First brewed</strong>
+                                <br>
+                                04/2013
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>PH</strong> 4
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Attenuation level</strong>
+                                <br>
+                                81.8
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Boil volume</strong>
+                                <br>
+                                25 litres
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Food pairing</strong>
+                            <ul>
+                                <li>Citrus salad with balsamic dressing</li>
+                                <li>Lobster</li>
+                                <li>Ginger and orange cookies</li>
+                            </ul>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <label>
+                                    <input type="checkbox" />
+                                    <span><strong>Already drunk ?</strong></span>
+                                </label>
+                                <input type="text" class="datepicker" placeholder="Select tasting date">
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col">
+
+                    <p>
+                        Our take on the classic German Kristallweizen. A clear German wheat beer, layers of bubblegum and vanilla perfectly balanced with the American and New Zealand hops.
+                    </p>
+
+                    <p>
+                        <strong>Brewers tips</strong>
+                        <br>
+                        Ferment at higher or lower temperatures to select the esters that will create clove- like or banana-like flavours.
+                    </p>
+
+                    <p>
+                        <strong>Contributed by</strong> Sam Mason
+                    </p>
+
+                </div>
+
+            </div>
 
         </div>
 
         <div class="col s8">
+            <h5><i class="material-icons">book</i> Ingredients</h5>
+            <table class="highlight striped">
+                <thead>
+                <tr>
+                    <th>Malt</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                </thead>
+
+                <tbody>
+
+                <tr>
+                    <td></td>
+                    <td>Extra Pale</td>
+                    <td>2.69 kilograms</td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td>Wheat</td>
+                    <td>1.25 kilograms</td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td>Caramalt</td>
+                    <td>0.38 kilograms</td>
+                </tr>
+
+                </tbody>
+
+                <thead>
+                <tr>
+                    <th>Hops</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                </thead>
+
+                <tbody>
+
+                <tr>
+                    <td></td>
+                    <td>Extra Pale</td>
+                    <td>2.69 kilograms</td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td>Wheat</td>
+                    <td>1.25 kilograms</td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td>Caramalt</td>
+                    <td>0.38 kilograms</td>
+                </tr>
+
+                </tbody>
+
+            </table>
+
+            <label>
+                <textarea class="m4" rows="10" placeholder="Write what you want..."></textarea>
+            </label>
 
         </div>
 
     </div>
-
 </div>
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        let elems = document.querySelectorAll('.datepicker');
+        let instances = M.Datepicker.init(elems);
+    });
+</script>
 
 </body>
 </html>
