--- a/html/biere-13.html
+++ b/html/biere-13.html
@@ -23,59 +23,123 @@
     </nav>
 
     <div class="container">
-        <table class="striped">
-            <thead>
-                <tr>
-                    <th>Ingredient</th>
-                    <th>Name</th>
-                    <th>Amount</th>
-                </tr>
-            </thead>
+        <div class="col">
+            <div class="row">
+                <div class="col s6">
+                    <div class="row">
+                        <div class="col s3">
+                            <img class="responsive-img" src="https://images.punkapi.com/v2/13.png" height="50px">
+                        </div>
+                        <div class="col s9">
+                            <p><b>first_brewed : </b> 11/2009</p>
+                            <p><b>PH : </b> 5.2</p>
+                            <p><b>attenuation_level : </b> 5.2</p>
+                            <p><b>boil_level : </b> 5.2</p>
+                            <p><b>Food pairing : </b> </p>
+                            <ul class="collection">
+                                <li class="collection-item">Vegetable egg scramble</li>
+                                <li class="collection-item">Margherita pizza</li>
+                                <li class="collection-item">Fresh berry crisp tart</li>
+                            </ul>
+                            <form action="#">
+                                <p>
+                                    <label>
+                                        <input type="checkbox" />
+                                        <span>Déjà bu</span>
+                                    </label>
+                                </p>
+                            </form>
+                            <input type="text" class="datepicker" placeholder="Date de dégustation">
+                        </div>
+                    </div>
+                    <p><b>Tagline : </b> Moustache-Worthy Beer.</p>
+                    <div class="row">
+                        <i class="material-icons">star_rate</i>
+                        <i class="material-icons">star_rate</i>
+                        <i class="material-icons">star_rate</i>
+                        <i class="material-icons">star_rate</i>
+                        <i class="material-icons">star_half</i>
+                    </div>
 
-            <tbody>
-                <tr>
-                    <td>Malt</td>
-                    <td>Maris Otter Extra Pale</td>
-                    <td>3.44 kilograms</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Caramalt</td>
-                    <td>0.63 kilograms</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Crystal 150</td>
-                    <td>0.31 kilograms</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Carafa Special Malt Type 1</td>
-                    <td>0.31 kilograms</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Carafa Special Malt Type 3</td>
-                    <td>0.31 kilograms</td>
-                </tr>
-                <tr>
-                    <td>Hops</td>
-                    <td>Cascade</td>
-                    <td>43.8 grams</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Cascade</td>
-                    <td>81.3 grams</td>
-                </tr>
-                <tr>
-                    <td>Yeast</td>
-                    <td>Wyeast 1056 - American Ale™</td>
-                    <td></td>
-                </tr>
+                </div>
 
-            </tbody>
-        </table>
+                <!-- Tableau -->
+                <div class="col s6">
+                    <table class="striped">
+                        <thead>
+                            <tr>
+                                <th>Ingredient</th>
+                                <th>Name</th>
+                                <th>Amount</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>Malt</td>
+                                <td>Maris Otter Extra Pale</td>
+                                <td>3.44 kilograms</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Caramalt</td>
+                                <td>0.63 kilograms</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Crystal 150</td>
+                                <td>0.31 kilograms</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Carafa Special Malt Type 1</td>
+                                <td>0.31 kilograms</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Carafa Special Malt Type 3</td>
+                                <td>0.31 kilograms</td>
+                            </tr>
+                            <tr>
+                                <td>Hops</td>
+                                <td>Cascade</td>
+                                <td>43.8 grams</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Cascade</td>
+                                <td>81.3 grams</td>
+                            </tr>
+                            <tr>
+                                <td>Yeast</td>
+                                <td>Wyeast 1056 - American Ale™</td>
+                                <td></td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="col s6">
+                <div class="input-field col s12">
+                    <textarea id="textarea1" class="materialize-textarea"></textarea>
+                    <label for="textarea1">Commentaire</label>
+                </div>
+            </div>
+
+            <!-- Boutons -->
+            <div class="row">
+                <div class="col s11 center">
+                    <a class="waves-effect waves-light btn" href="biere-12.html">Précédent</a>
+                    <a class="waves-effect waves-light btn" href="biere-14.html">Suivant</a>
+                </div>
+                <div class="col s1">
+                    <a class="btn-floating btn-large waves-effect waves-light red"><i
+                            class="material-icons">edit</i></a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="page-footer">
