--- a/html/biere-12.html
+++ b/html/biere-12.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<nav>
+<nav style="background-color: #333333;">
     <div class="nav-wrapper">
         <a href="#" class="brand-logo center">Arcade Nation</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
@@ -20,7 +20,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container" style="margin-top: 80px">
     <div class="row">
         <div class="col s5">
             <div class="row">
@@ -34,9 +34,9 @@
                     <p>Boil volume : 25l</p>
                     <p>Food pairing :</p>
                     <ul>
-                        <li>King prawn kebabs</li>
-                        <li>Halibut with a mango and tomato salad</li>
-                        <li>Mint chocloate ice cream</li>
+                        <li>- King prawn kebabs</li>
+                        <li>- Halibut with a mango and tomato salad</li>
+                        <li>- Mint chocloate ice cream</li>
                     </ul>
                     <p>
                         <label>
@@ -47,6 +47,15 @@
                 </div>
                 <div class="col s12">
                     <p>Seasonal Black IPA.</p>
+                    <p>
+                        Running the knife-edge between an India Pale Ale and a Stout, this particular style is one we truly love.
+                        Black IPAs are a great showcase for the skill of our brew team, balancing so many complex and twisting flavours
+                        in the same moment. The citrus, mango and pine from the hops (three of our all-time favourites) play off against
+                        the roasty dryness from the malt bill at each and every turn.
+                    </p>
+                    <p>Brewers tips : </p>
+                    <p>Be as accurate as possible when weighing out your malts to ensure you strike the right balance.</p>
+                    <p>Contributed by : Sam Mason (samjbmason)</p>
                 </div>
             </div>
         </div>
@@ -141,9 +150,29 @@
                 </tbody>
             </table>
         </div>
+
+        <div class="col s5">
+
+        </div>
+        <div class="col s7">
+
+        </div>
     </div>
+
+    <div class="col s12" style="text-align: center; margin-bottom: 40px;">
+        <a class="waves-effect waves-light btn">Pr&eacute;c&eacute;dent</a>
+        <a class="waves-effect waves-light btn">Suivant</a>
+    </div>
+
 </div>
 
+<a class="btn-floating btn-large waves-effect waves-light red" style="position: fixed; right: 40px; bottom: 60px;"><i class="material-icons">edit</i></a>
+
+<footer class="page-footer" style="background-color: #333333;">
+    <div class="container center" style="padding-bottom: 16px">
+        <a class="grey-text text-lighten-4 center">AlanLG FIL 2022</a>
+    </div>
+</footer>
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
