--- a/html/biere-6.html
+++ b/html/biere-6.html
@@ -24,7 +24,9 @@
               <img class="beer-img" src="https://images.punkapi.com/v2/6.png" alt="biere6">
             </div>
             <div class="col s9">
-              <div class="beer-details">
+              <div class="beer-details beer-description">
+                <div><b>Première production</b><p>05/2013</p></div>
+                <div><b>PH</b><p>4.4</p></div>
                 <label>
                   <input class="filled-in" type="checkbox" />
                   <span>Déjà bu</span>
@@ -35,15 +37,26 @@
           <div class="row beer-description">
             <div class="col s12">
               <div>
-                <h4>Electric India</h4>
+                <h5>Vibrant Hoppy Saison</h5>
               </div>
               <div>
-                Note
-                <p class="range-field">
-                  <input type="range" id="rank" min="1" max="5" value="1"/>
+                <b>Note</b> <br>
+                <img height="25px" src="https://www.flaticon.com/svg/static/icons/svg/60/60962.svg" alt="star" class="5">
+                <img height="25px" src="https://www.flaticon.com/svg/static/icons/svg/60/60962.svg" alt="star" class="5">
+                <img height="25px" src="https://www.flaticon.com/svg/static/icons/svg/60/60962.svg" alt="star" class="5">
+                <img height="25px" src="https://www.flaticon.com/svg/static/icons/svg/60/60962.svg" alt="star" class="5">
+                <img height="25px" src="https://www.flaticon.com/svg/static/icons/svg/60/60962.svg" alt="star" class="5">
+              </div>
+              <div><b>Description</b>
+                <p>
+                  Re-brewed as a spring seasonal, this beer – which appeared originally as an Equity Punk shareholder creation – retains its trademark spicy, fruity edge. A perfect blend of Belgian Saison and US IPA, crushed peppercorns and heather honey are also added to produce a genuinely unique beer.
                 </p>
               </div>
-              <div>description</div>
+              <div>
+                <b>Tips</b>
+                <p>Source some really good heather honey to get the right spicy esters in the beer.</p>
+              </div>
+              <p><i>Contributed by Sam Mason</i></p>
             </div>
           </div>
         </div>
@@ -79,7 +92,7 @@
           </div>
           <div class="row beer-comment">
             <label for="comment">Commentaires</label>
-            <textarea row id="comment" class="materialize-textarea"></textarea>
+            <textarea rows="25" id="comment" class="materialize-textarea"></textarea>
           </div>
         </div>
       </div>
