--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -40,16 +40,16 @@
                         <img src="https://images.punkapi.com/v2/29.png" alt="Image de la bière 5" class="responsive-img">
                     </div>
                     <div class="col s6">
-                        <div class="first-brewed">02/2011</div>
-                        <div class="ph">4.4</div>
-                        <div class="attenuation-level">67</div>
-                        <div class="boil-volume">25 litres</div>
+                        <div class="first-brewed">First brewed: 04/2013</div>
+                        <div class="ph">PH: 4.4</div>
+                        <div class="attenuation-level">Attenuation level: 79.7</div>
+                        <div class="boil-volume">Boil volume: 25 litres</div>
                         <div class="food-pairing">
                             Food pairing:
                             <ul class="collection">
-                                <li class="collection-item">Vietnamese squid salad</li>
-                                <li class="collection-item">Chargrilled corn on the cob with paprika butter</li>
-                                <li class="collection-item">Strawberry and rhubarb pie</li>
+                                <li class="collection-item">VArrabiata pasta</li>
+                                <li class="collection-item">Mulled cheddar</li>
+                                <li class="collection-item">Toasted almond cake</li>
                             </ul>
                         </div>
                         <div class="already-drinked">
@@ -59,13 +59,14 @@
                             </label>
                         </div>
                         <div class="degustation-date">
+                            Degustation date:
                             <input type="text" class="datepicker">
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col s12">
-                        <div class="tagline">Bloggers' Imperial Pilsner.</div>
+                        <div class="tagline">Imperial Red Ale.</div>
                         <div class="rate">
                             <i class="material-icons">star</i>
                             <i class="material-icons">star</i>
@@ -73,12 +74,8 @@
                             <i class="material-icons">star</i>
                             <i class="material-icons">star_border</i>
                         </div>
-                        <div class="description">An Imperial Pilsner in collaboration with beer writers. Tradition.
-                            Homage. Revolution. We wanted to showcase the awesome backbone of the Czech brewing
-                            tradition, the noble Saaz hop, and also tip our hats to the modern beers that rock our
-                            world, and the people who make them.</div>
-                        <div class="brewer-tips">Make sure you have a big enough yeast starter to ferment through the OG
-                            and lager successfully.</div>
+                        <div class="description">10 Heads High is loosely based on our awesome 2011 Prototype beer Hops Kill Nazis. This is an uncompromising 7.8% Imperial Red Ale loaded high with American Hops. Think of this as an Imperial India Red Ale, or a super-charged version of 5am Saint. Either way this is a seriously good beer!</div>
+                        <div class="brewer-tips">Achieve the red colour by using the ratio of Caramalt, Crystal and Dark Crystal malts. The trick is to get the colour, without too much dried fruit character.</div>
                         <div class="contributed-by">Sam Mason &lt;samjbmason&gt;</div>
                     </div>
                 </div>
