--- a/html/biere-11.html
+++ b/html/biere-11.html
@@ -10,10 +10,12 @@
         <header>      
             <nav>
                 <div class="nav-wrapper">
-                <a href="#" class="brand-logo center">Misspent Youth</a>
-                <ul class="left hide-on-med-and-down">
-                    <li><a href="sass.html"><i class="material-icons">arrow_back</i></a></li>
-                  </ul>
+                    <a href="#" class="brand-logo center">Misspent Youth</a>
+                    <ul class="left hide-on-med-and-down">
+                        <li>
+                            <a href="sass.html"><i class="material-icons">arrow_back</i></a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
         </header>
@@ -29,7 +31,7 @@
                         </label>
                     </p>
                 </div>
-                <div class="col s2">
+                <div class="col s6">
                     <table>            
                       <tbody>
                         <tr>
@@ -56,7 +58,13 @@
                     </table>
                 </div>
             </div>
-            <div style="margin-bottom: 10px; margin-left: 15px;"><i class="material-icons">star</i><i class="material-icons">star</i><i class="material-icons">star</i><i class="material-icons">star</i><i class="material-icons">star_border</i></div>
+            <div style="margin-bottom: 10px; margin-left: 15px;">
+                <i class="material-icons">star</i>
+                <i class="material-icons">star</i>
+                <i class="material-icons">star</i>
+                <i class="material-icons">star</i>
+                <i class="material-icons">star_border</i>
+            </div>
             <div class="row">
                 <div class="col s3"><p>Lots of malt in this one. Mash-in in stages, and spread the pale ale malt throughout the mash to provide stability. If the mash starts to sink, stop, wait a few minutes while mixing, then start again.</p></div>
                 <div class="col s6" style="margin-left: 100px;"><textarea></textarea></div>
