--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<div class="biere">
 				<a href="./html/biere-18.html">Bière 18</a>
 				<img src="./media/biere-18.png" alt="Bière 18" />
-				<p>baseline 18</p>
+				<p>Russian Doll – India Pale Ale</p>
 			</div>
 			<div class="biere">
 				<a href="./html/biere-19.html">Bière 19</a>
