--- a/html/biere-13.html
+++ b/html/biere-13.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="./style/biere-13.css" />
+    <link rel="stylesheet" href="/style/biere-13.css" />
 </head>
 
 <body>
@@ -60,6 +60,11 @@
                         <i class="material-icons">star_rate</i>
                         <i class="material-icons">star_half</i>
                     </div>
+                    <p>A deliciously robust, black malted beer with a decadent dark, dry cocoa flavour that provides an
+                        enticing backdrop to the Cascade hops.</p>
+                    <p><b>brewers_tips : </b> If you can’t find really fresh cascade, substitute it for Amarillo or
+                        Ahtanum.</p>
+                    <p><b>contributed_by : </b>Sam Mason <pre><samjbmason></pre></p>
 
                 </div>
 
