--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
 				<p>baseline 5</p>
 			</div>
 			<div class="biere">
-				<a href="./html/biere-6.html">Bière 6</a>
-				<img src="./media/biere-6.png" alt="Bière 6" />
-				<p>baseline 6</p>
+				<div class="card">
+					<div class="card-content center">
+						<a href="./html/biere-6.html">Bière 6</a><br>
+						<img src="https://images.punkapi.com/v2/6.png" alt="Bière 6" />
+						<p>baseline 6</p>
+					</div>
+				</div>
 			</div>
 			<div class="biere">
 				<a href="./html/biere-7.html">Bière 7</a>
